test/fail/basic_syntax/brace_outside_block.lily
#[
SyntaxError: '}' outside of a block.
    from brace_outside_block.lily:6:
]#

}
